fix: layout shift

--- a/src/styles/_feo-config.scss
+++ b/src/styles/_feo-config.scss
@@ -23,7 +23,7 @@ $feo-colors: (
 
 $feo-font-families: (
   monospace: "Inconsolata, Menlo, Monaco, Consolas, 'Courier New', monospace",
-  serif: "'Source Serif', ui-serif, Georgia, Cambria, serif",
+  serif: "ui-serif, Georgia, Cambria, serif",
   sans-serif:
     "'CSans', system-ui, -apple-system, blinkmacsystemfont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif"
 );
